[metadata]
name = papercast_arxiv
version = 0.1.0
author = Gabriel Simmons
author_email = gabe@papercast.dev
description = Arxiv Collector plugin for Papercast
url = https://github.com/papercast-dev/papercast-arxiv

[options]
packages = find:
install_requires =
    papercast
    arxiv
    # Any dependencies required by the plugin

[options.entry_points]
papercast.collectors =
    ArxivCollector = papercast_arxiv:ArxivCollector
